# SemiImplicitFV

./: .gitignore  CLAUDE.md  CMakeLists.txt  MPI_PLAN.md  README.md  run_case.sh
.github/: CONTRIBUTING.md
build-nvhpc/: 1D_advection  1D_gas_gas_shocktube  1D_hydrostatic_water  1D_liquid_gas_shocktube  1D_sod_shocktube  2D_channel_flow  2D_flow_over_circle  2D_isentropic_vortex  2D_laplace_pressure_jump  2D_quasi1D_sod  2D_riemann  2D_rising_bubble
build_asan/: 1D_SI_advection
examples/: sod_shock.cpp
examples/1D_E_sod_shocktube/: 1D_E_sod_shocktube.cpp  plot_sod.py
examples/1D_SI_advection/: 1D_SI_advection.cpp  plot_advection.py
examples/1D_SI_sod_shocktube/: sod_shock.cpp
examples/1D_advection/: 1D_advection.cpp  explicitError.csv  plot_errors.py  runtime.csv  semiImplicitError.csv
examples/1D_gas_gas_shocktube/: 1D_gas_gas_shocktube.cpp
examples/1D_hydrostatic_water/: 1D_hydrostatic_water.cpp
examples/1D_liquid_gas_shocktube/: 1D_liquid_gas_shocktube.cpp
examples/1D_sod_shocktube/: 1D_sod_shocktube.cpp  sod_shock.cpp
examples/2D_E_quasi1D_sod/: 2D_E_quasi1D_sod.cpp
examples/2D_E_riemann/: 2D_E_riemann.cpp
examples/2D_channel_flow/: 2D_channel_flow.cpp
examples/2D_flow_over_circle/: 2D_flow_over_circle.cpp
examples/2D_isentropic_vortex/: 2D_isentropic_vortex.cpp
examples/2D_laplace_pressure_jump/: 2D_laplace_pressure_jump.cpp
examples/2D_quasi1D_sod/: 2D_quasi1D_sod.cpp
examples/2D_riemann/: 2D_riemann.cpp
examples/2D_rising_bubble/: 2D_rising_bubble.cpp
include/: EquationOfState.hpp  ExplicitSolver.hpp  GaussSeidelPressureSolver.hpp  HLLCSolver.hpp  HaloExchange.hpp  HyprePressureSolver.hpp  IGR.hpp  IdealGasEOS.hpp  ImmersedBoundary.hpp  JacobiPressureSolver.hpp  LFSolver.hpp  MPIContext.hpp  MixtureEOS.hpp  PressureLaplacian.hpp  PressureSolver.hpp  RKTimeStepping.hpp  Reconstruction.hpp  RectilinearMesh.hpp  RiemannSolver.hpp  Runtime.hpp  RusanovSolver.hpp  SemiImplicitSolver.hpp  SimulationConfig.hpp  SolutionState.hpp  State.hpp  StiffenedGasEOS.hpp  SurfaceTension.hpp  UpwindSolver.hpp  VTKSession.hpp  VTKWriter.hpp  VariablesConversion.hpp  ViscousFlux.hpp
src/: EquationOfState.cpp  ExplicitSolver.cpp  GaussSeidelPressureSolver.cpp  HLLCSolver.cpp  HaloExchange.cpp  HyprePressureSolver.cpp  IGR.cpp  IdealGasEOS.cpp  ImmersedBoundary.cpp  JacobiPressureSolver.cpp  LFSolver.cpp  MPIContext.cpp  MixtureEOS.cpp  PressureLaplacian.cpp  RKTimeStepping.cpp  Reconstruction.cpp  RectilinearMesh.cpp  RiemannSolver.cpp  Runtime.cpp  RusanovSolver.cpp  SemiImplicitSolver.cpp  SolutionState.cpp  StiffenedGasEOS.cpp  SurfaceTension.cpp  UpwindSolver.cpp  VTKSession.cpp  VTKWriter.cpp  VariablesConversion.cpp  ViscousFlux.cpp
